RESOLVED FIXED143237
[Mac][WK2] Fullscreen animation incorrect when initiated on non-primary monitor
https://bugs.webkit.org/show_bug.cgi?id=143237
Summary [Mac][WK2] Fullscreen animation incorrect when initiated on non-primary monitor
Jer Noble
Reported 2015-03-30 14:32:53 PDT
[Mac][WK2] Fullscreen animation incorrect when initiated on non-primary monitor
Attachments
Patch (6.34 KB, patch)
2015-03-30 14:34 PDT, Jer Noble
no flags
Jer Noble
Comment 1 2015-03-30 14:34:39 PDT
Brent Fulgham
Comment 2 2015-04-02 15:34:47 PDT
Comment on attachment 249763 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=249763&action=review No test? :-( r=me. > Source/WebKit2/UIProcess/mac/WKFullScreenWindowController.mm:517 > + CGAffineTransform resetOriginTransform = CGAffineTransformMakeTranslation(screenFrame.x() - finalFrame.x(), screenFrame.y() - finalFrame.y()); Interesting! I hadn't thought about the case where the screens might be oriented vertically with respect to each other, but of course that's entirely possible.
Jer Noble
Comment 3 2015-04-02 15:39:07 PDT
(In reply to comment #2) > Comment on attachment 249763 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=249763&action=review > > No test? :-( I couldn't figure out a way to artificially create a NSScreen and place the NSWindow into it. :( > r=me. Thanks!
Jer Noble
Comment 4 2015-04-02 15:41:47 PDT
WebKit Commit Bot
Comment 5 2015-04-02 15:51:30 PDT
Comment on attachment 249763 [details] Patch Clearing flags on attachment: 249763 Committed r182295: <http://trac.webkit.org/changeset/182295>
WebKit Commit Bot
Comment 6 2015-04-02 15:51:33 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.