[Mac][WK2] Fullscreen animation incorrect when initiated on non-primary monitor https://bugs.webkit.org/show_bug.cgi?id=143237

Reviewed by Brent Fulgham.

The animation calculations have an implicit assumptions of a screen whose origin is 0,0. Account
for the screen origin by passing the window's screen's frame into the zoomAnimation() and maskAnimation()
methods.

* UIProcess/mac/WKFullScreenWindowController.mm:
(-[WKFullScreenWindowController initWithWindow:webView:]):
(zoomAnimation):
(maskAnimation):
(-[WKFullScreenWindowController _startEnterFullScreenAnimationWithDuration:]):
(-[WKFullScreenWindowController _startExitFullScreenAnimationWithDuration:]):


Canonical link: https://commits.webkit.org/161387@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@182295 268f45cc-cd09-0410-ab3c-d52691b4dbfc